# apg

./: .gitignore  Cargo.toml  README.md  cmd_prisma.sh
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/prisma-cli/: Cargo.toml
src/: main.rs  prisma.rs
src/graphql/mutation/: user.rs
src/graphql/query/: post.rs
